--- a/LittleFly/Makefile
+++ b/LittleFly/Makefile
@@ -32,15 +32,38 @@
 		endif
 	endif
 
+	# check LD version
+	ifneq ($(shell xxd --version 2>&1 | head -n 1 | grep xxd),)
+		USE_XXD = 1
+	else ifneq ($(shell $(LD) --version 2>&1 | head -n 1 | grep LLD),)
+		ifneq ($(shell uname -a | grep  x86_64), )
+			LDEMULATION := elf_x86_64
+		else ifneq ($(shell uname -a | grep amd64), )
+			LDEMULATION := elf_x86_64
+		else ifneq ($(shell uname -a | grep i386), )
+			LDEMULATION := elf_i386
+		endif
+		USE_LDD = 1
+	else ifneq ($(shell gold --version 2>&1 | head -n 1 | grep gold),)
+		LD = gold
+	endif
+
 	# set bundle name
 	NAME = LittleFly
 	BUNDLE = $(NAME).lv2
 	VER = 1.0
 
+	RESOURCES_DIR :=./gui/
 	LIB_DIR := ../libxputty/libxputty/
 	HEADER_DIR := $(LIB_DIR)include/
 	INCLUDE_DIR := $(LIB_DIR)/lv2_plugin/
 
+
+	RESOURCES := $(wildcard $(RESOURCES_DIR)*.png)
+	RESOURCES_OBJ := $(notdir $(patsubst %.png,%.o,$(RESOURCES)))
+	RESOURCES_LIB := $(notdir $(patsubst %.png,%.a,$(RESOURCES)))
+	RESOURCE_EXTLD := $(notdir $(patsubst %.png,%_png,$(RESOURCES)))
+	RESOURCEHEADER := xresources.h
 	# set compile flags
 	CXXFLAGS += -O2 -D_FORTIFY_SOURCE=2 -I. -I./dsp -I./plugin -fPIC -DPIC -O2 -Wall -fstack-protector -funroll-loops \
 	-ffast-math -fomit-frame-pointer -fstrength-reduce -fdata-sections \
@@ -58,7 +81,7 @@
 
 .PHONY : $(HEADER_DIR)*.h mod all clean install uninstall 
 
-all : check $(NAME)
+all : $(RESOURCEHEADER) check $(NAME)
 	@mkdir -p ./$(BUNDLE)
 	@cp ./plugin/*.ttl ./$(BUNDLE)
 	@mv ./*.so ./$(BUNDLE)
@@ -69,6 +92,30 @@ all : check $(NAME)
 mod : 
 	@echo "Not implemented for $(NAME)"
 
+$(RESOURCEHEADER): $(RESOURCES_OBJ)
+	rm -f $(RESOURCEHEADER)
+	for f in $(RESOURCE_EXTLD); do \
+		echo 'EXTLD('$${f}')' >> $(RESOURCEHEADER) ; \
+	done
+
+ifdef USE_XXD
+$(RESOURCES_OBJ): $(RESOURCES)
+	@#use this line to regenerate the *.c files from used images
+	@cd $(RESOURCES_DIR) && xxd -i $(patsubst %.o,%.png,$@) > $(patsubst %.o,%.c,$@)
+	$(CC) -c $(RESOURCES_DIR)$(patsubst %.o,%.c,$@) -o $@
+	$(AR) rcs $(patsubst %.o,%.a,$@) $@
+else ifdef USE_LDD
+$(RESOURCES_OBJ): $(RESOURCES)
+	cd $(RESOURCES_DIR) && $(LD) -r -b binary -m $(LDEMULATION) -z noexecstack $(patsubst %.o,%.png,$@) -o ../$@
+	$(AR) rcs $(patsubst %.o,%.a,$@) $@
+	LDFLAGS += -DUSE_LD=1
+else
+$(RESOURCES_OBJ): $(RESOURCES)
+	cd $(RESOURCES_DIR) && $(LD) -r -b binary -z noexecstack --strip-all $(patsubst %.o,%.png,$@) -o ../$@
+	$(AR) rcs $(patsubst %.o,%.a,$@) $@
+	LDFLAGS += -DUSE_LD=1
+endif
+
 check :
 ifdef ARMCPU
 	@echo $(RED)ARM CPU DEDECTED, please check the optimization flags
@@ -76,6 +123,7 @@ ifdef ARMCPU
 endif
 
 clean :
+	rm -f *.a *.o *.so xresources.h
 	@rm -f $(NAME).so
 	@rm -rf ./$(BUNDLE)
 	@echo ". ." $(BLUE)", clean up"$(NONE)
@@ -101,7 +149,7 @@ uninstall :
 
 $(NAME) :
 	$(CXX) $(CXXFLAGS) $(OBJECTS) $(LDFLAGS) -o $(NAME).so
-	$(CXX) $(CXXFLAGS) -Wl,-z,nodelete $(GUI_OBJECTS) $(GUI_LDFLAGS) -o $(NAME)_ui.so
+	$(CXX) $(CXXFLAGS) -Wl,-z,nodelete $(GUI_OBJECTS) -L. $(RESOURCES_LIB) $(GUI_LDFLAGS) -o $(NAME)_ui.so
 	$(STRIP) -s -x -X -R .comment -R .note.ABI-tag $(NAME).so
 	$(STRIP) -s -x -X -R .comment -R .note.ABI-tag $(NAME)_ui.so
 
